[package]
name = "erm"
version = "0.1.1"
authors = ["Abhay Shankar K"]
keywords = ["enum", "maybe", "option", "randomised-algo"]
description = "A five-way enum to express uncertainty."
repository = "https://github.com/Abhay478/erm"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"

[dependencies]
